fix(toolbox): Fix toolbox overflow past footer
I thought I fixed this during the last sprint but only partially. The
real fix was to move the height and overflow to the Toolbox SCSS, not
the ToolboxCollections SCSS as it only fixed it for that one view.

IssueID EODHP-628

--- a/src/pages/MapViewer/components/Toolbox/components/ToolboxCollections/styles.scss
+++ b/src/pages/MapViewer/components/Toolbox/components/ToolboxCollections/styles.scss
@@ -1,5 +1,4 @@
 /* stylelint-disable-next-line selector-class-pattern */
 .toolbox__collections {
-  height: 550px;
-  overflow-y: auto;
+  height: 100%;
 }
