--- a/src/pages/MapViewer/components/Toolbox/styles.scss
+++ b/src/pages/MapViewer/components/Toolbox/styles.scss
@@ -38,7 +38,7 @@
   }
 
   &__content {
-    height: 100%;
+    height: 550px;
     overflow-y: auto;
   }
 
